--- a/start/templates/start/Consent.html
+++ b/start/templates/start/Consent.html
@@ -1,27 +1,16 @@
-{% extends "global/Page.html" %}
-{% load otree static %}
-
 {% block title %}
-
+Consent Form
 {% endblock %}
 
 {% block content %}
-<style>
-body{max-width: initial!important;}
-.otree-body.container{
-    
-    width: 100%!important;
-    max-width: 1000px;
-    margin-top: 0px!important;
-}
-h2.otree-title.page-header.mt-5{display:none}
-</style>
-{% autoescape off%}
-    {{session.vars.consent}}
-{% endautoescape %}
+<h2>Welcome to the experiment</h2>
+<p>
+By continuing, you consent to participate in this study. 
+Your answers will remain anonymous and confidential.
+</p>
 
-    <button class="otree-btn-next btn btn-primary">I want to participate!</button>
-
-
-
-    {% endblock %}
+<form method="post">
+    {% csrf_token %}
+    <button class="btn btn-primary">I Agree</button>
+</form>
+{% endblock %}
