--- a/start/templates/start/Instructions.html
+++ b/start/templates/start/Instructions.html
@@ -1,14 +1,17 @@
 {% block title %}
-Introduction
+Instructions
 {% endblock %}
 
 {% block content %}
-<h2>Welcome to the Experiment</h2>
+<h2>Instructions</h2>
 <p>
-In this study, you will be asked to make decisions and complete tasks. Please read the instructions carefully before you begin.
+On the following screens, you will be presented with tasks. Please follow the instructions shown for each task carefully.
+</p>
+<p>
+If you have any questions, please raise your hand and the experimenter will assist you.
 </p>
 
 <form method="post">
-    <button class="btn btn-primary">Continue</button>
+    <button class="btn btn-primary">Start</button>
 </form>
 {% endblock %}
