--- a/start/templates/start/Practice2.html
+++ b/start/templates/start/Practice2.html
@@ -1,109 +1,65 @@
-{% extends "global/Page.html" %}
+{% extends "otree/Page.html" %}
 {% load otree static %}
-
-{% block title %}
-
-{% endblock %}
 
 {% block content %}
 <script>
-    window.interpreter_title = {{ session.vars.interpreter_title | json }}
-    window.interpreter_choices = {{ session.vars.interpreter_choices | json }}
+  // Make these available to Vue
+  window.interpreter_title   = {{ session.vars.interpreter_title|json }};
+  window.interpreter_choices = {{ session.vars.interpreter_choices|json }};
 </script>
-
 
 <div id="app">
-    {% verbatim %}
-    <h1>{{title}}</h1>
-    <div v-html="main_text"></div>
-    <div class="text-center my-3">
-        <div class="image">
-            <img :src="image_path" alt="" :width="500">
-        </div>
+  {% verbatim %}
+  <h1>{{ title }}</h1>
+  <div v-html="main_text"></div>
+
+  <div class="text-center my-3">
+    <div class="image">
+      <img :src="image_path" :alt="title" :width="500" style="max-width: 600px; width: 100%; height: auto;">
     </div>
-    <form @submit.prevent="checkChoices">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">{{interpreter_title}}</th>
-                    <th scope="col">Yes</th>
-                    <th scope="col">No</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr v-for="(sweet, index) in sweets" :key="index">
-                    <td>{{ sweet.name }}</td>
-                    <td><input type="radio" v-model="sweet.choice" :value="true" @change="resetError"></td>
-                    <td><input type="radio" v-model="sweet.choice" :value="false" @change="resetError"></td>
+  </div>
 
-                </tr>
-            </tbody>
-        </table>
+  <form id="form" @submit.prevent="checkChoices">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">{{ interpreter_title }}</th>
+          <th scope="col">Yes</th>
+          <th scope="col">No</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr v-for="(sweet, index) in sweets" :key="index">
+          <td>{{ sweet.name }}</td>
+          <td><input type="radio" v-model="sweet.choice" :value="true"  @change="resetError"></td>
+          <td><input type="radio" v-model="sweet.choice" :value="false" @change="resetError"></td>
+        </tr>
+      </tbody>
+    </table>
 
-        <button :disabled="!allChoicesMade" type="button" @click="checkChoices" class="btn btn-primary">Next</button>
-
-
-        <p v-if="error" class="alert alert-danger my-3">Error: please, check your answers!</p>
-    </form>
-    {% endverbatim %}
+    <button :disabled="!allChoicesMade" type="button" @click="checkChoices" class="btn btn-primary">Next</button>
+    <p v-if="error" class="alert alert-danger my-3">Error: please, check your answers!</p>
+  </form>
+  {% endverbatim %}
 </div>
+
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script>
-    const app = Vue.createApp({
-        data() {
-            const sweets = window.interpreter_choices.map((name, index) => ({ name: name, choice: null }));
+  const app = Vue.createApp({
+    data() {
+      // Pull settings safely from js_vars (otree injects this)
+      const s = (typeof js_vars !== 'undefined' && js_vars && js_vars.settings) ? js_vars.settings : {};
+      const choices = Array.isArray(window.interpreter_choices) ? window.interpreter_choices : [];
+      const sweets = choices.map(name => ({ name, choice: null }));
 
-            return {
-                image_path: js_vars.settings.full_image_path,
-                title: js_vars.settings.title,
-                main_text: js_vars.settings.main_text,
-                interpreter_title: window.interpreter_title,
-                sweets,
-                 correctAnswers: js_vars.settings.right_answer.map((i)=>Boolean(parseInt(i))),
-                error: false,
-            }
-        },
-        methods: {
-            resetError() {
-                this.error = false;
-            },
-            checkChoices() {
-                if (this.correctAnswers.length !== this.sweets.length) {
-                    console.log('Number of answers do not match');
-                    this.error = true;
-                    return
-                }
+      // Robust image path resolution
+      let image_path = s.full_image_path || s.image_url || '';
+      if (!image_path && s.image) {
+        const fname = (typeof s.image === 'string' && s.image.includes('.')) ? s.image : `${s.image}.png`;
+        image_path = `/static/start/practice/${fname}`;
+      }
+      if (!image_path) {
+        image_path = 'https://picsum.photos/200/300?text=No+Image';
+      }
 
-                const isCorrect = this.sweets.every((userAnswer, index) => {
-                    return userAnswer.choice === this.correctAnswers[index];
-                });
-                this.error = !isCorrect
-                if (isCorrect) {
-                    console.log('All answers are correct');
-                } else {
-                    console.log('Some answers are incorrect');
-                }
-
-
-                if (!this.error) {
-                    $('#form').submit()
-                }
-            }
-
-        },
-        computed: {
-            allChoicesMade() {
-                return this.sweets.every(sweet => sweet.choice !== null);
-            }
-        }
-    })
-    app.mount('#app')
-</script>
-
-
-
-
-
-
-
-{% endblock %}
+      // Robust answer parsing: accepts 1/0, '1'/'0', true/false, 'True'/'Fa
