--- a/start/templates/start/Practice2.html
+++ b/start/templates/start/Practice2.html
@@ -2,64 +2,86 @@
 {% load otree static %}
 
 {% block content %}
+
 <script>
-  // Make these available to Vue
   window.interpreter_title   = {{ session.vars.interpreter_title|json }};
   window.interpreter_choices = {{ session.vars.interpreter_choices|json }};
+  window.page_settings       = {{ settings|json }};
 </script>
 
 <div id="app">
-  {% verbatim %}
-  <h1>{{ title }}</h1>
+
+  <h1>[[ title ]]</h1>
   <div v-html="main_text"></div>
 
   <div class="text-center my-3">
-    <div class="image">
-      <img :src="image_path" :alt="title" :width="500" style="max-width: 600px; width: 100%; height: auto;">
-    </div>
+    <img :src="image_path" :alt="title" style="max-width: 600px; width: 100%; height: auto;">
   </div>
 
   <form id="form" @submit.prevent="checkChoices">
     <table class="table">
       <thead>
         <tr>
-          <th scope="col">{{ interpreter_title }}</th>
+          <th scope="col">[[ interpreter_title ]]</th>
           <th scope="col">Yes</th>
           <th scope="col">No</th>
         </tr>
       </thead>
       <tbody>
-        <tr v-for="(sweet, index) in sweets" :key="index">
-          <td>{{ sweet.name }}</td>
-          <td><input type="radio" v-model="sweet.choice" :value="true"  @change="resetError"></td>
-          <td><input type="radio" v-model="sweet.choice" :value="false" @change="resetError"></td>
+        <tr v-for="(opt, idx) in sweets" :key="idx">
+          <td>[[ opt.name ]]</td>
+          <td><input type="radio" v-model="opt.choice" :value="true"  @change="error=false"></td>
+          <td><input type="radio" v-model="opt.choice" :value="false" @change="error=false"></td>
         </tr>
       </tbody>
     </table>
 
-    <button :disabled="!allChoicesMade" type="button" @click="checkChoices" class="btn btn-primary">Next</button>
+    <button :disabled="!allChoicesMade" type="button" class="btn btn-primary" @click="checkChoices">Next</button>
     <p v-if="error" class="alert alert-danger my-3">Error: please, check your answers!</p>
   </form>
-  {% endverbatim %}
+
 </div>
 
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script>
-  const app = Vue.createApp({
-    data() {
-      // Pull settings safely from js_vars (otree injects this)
-      const s = (typeof js_vars !== 'undefined' && js_vars && js_vars.settings) ? js_vars.settings : {};
-      const choices = Array.isArray(window.interpreter_choices) ? window.interpreter_choices : [];
-      const sweets = choices.map(name => ({ name, choice: null }));
+console.log('About to create Vue app');
+console.log('window.page_settings =', window.page_settings);
 
-      // Robust image path resolution
-      let image_path = s.full_image_path || s.image_url || '';
-      if (!image_path && s.image) {
-        const fname = (typeof s.image === 'string' && s.image.includes('.')) ? s.image : `${s.image}.png`;
-        image_path = `/static/start/practice/${fname}`;
-      }
-      if (!image_path) {
-        image_path = 'https://picsum.photos/200/300?text=No+Image';
-      }
+const app = Vue.createApp({
+  data() {
+    const s = window.page_settings || {};
+    const answers = (s.right_answer || []);
+    const sweets  = (window.interpreter_choices || []).map(n => ({ name: n, choice: null }));
 
-      // Robust answer parsing: accepts 1/0, '1'/'0', true/false, 'True'/'Fa
+    return {
+      title: s.title || 'Practice 2',
+      main_text: s.main_text || '',
+      image_path: s.full_image_path || 'https://picsum.photos/200/300?text=No+Image',
+      interpreter_title: window.interpreter_title || 'Interpretation',
+      sweets,
+      correctAnswers: answers.map(a => Boolean(parseInt(a))),
+      error: false,
+    }
+  },
+  mounted() {
+    console.log('Vue mounted! image_path =', this.image_path);
+  },
+  computed: {
+    allChoicesMade() { return this.sweets.every(s => s.choice !== null); }
+  },
+  methods: {
+    checkChoices() {
+      if (this.correctAnswers.length !== this.sweets.length) { this.error = true; return; }
+      const ok = this.sweets.every((u, i) => u.choice === this.correctAnswers[i]);
+      this.error = !ok;
+      if (ok) document.getElementById('form').submit();
+    }
+  }
+});
+
+app.config.compilerOptions.delimiters = ['[[', ']]'];
+app.mount('#app');
+console.log('Vue app mounted');
+</script>
+
+{% endblock %}
