--- a/start/templates/start/Practice3.html
+++ b/start/templates/start/Practice3.html
@@ -1,110 +1,91 @@
-{% extends "global/Page.html" %}
+{% extends "otree/Page.html" %}
 {% load otree static %}
-
-{% block title %}
-
-{% endblock %}
 
 {% block content %}
 
 <script>
-    window.interpreter_title = {{ session.vars.interpreter_title | json }}
-    window.interpreter_choices = {{ session.vars.interpreter_choices | json }}
+  // expose values for Vue
+  window.interpreter_title   = {{ session.vars.interpreter_title|json }};
+  window.interpreter_choices = {{ session.vars.interpreter_choices|json }};
+  window.page_settings       = {{ settings|json }};
 </script>
 
 <div id="app">
-    {% verbatim %}
-    <h1>{{title}}</h1>
-    <div v-html="main_text"></div>
-    <div class="text-center my-3">
-        <div class="image">
-            <img :src="image_path" alt="" :width="500">
-        </div>
-    </div>
-    <form @submit.prevent="checkChoices">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">{{interpreter_title}}</th>
-                    <th scope="col">Yes</th>
-                    <th scope="col">No</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr v-for="(sweet, index) in sweets" :key="index">
-                    <td>{{ sweet.name }}</td>
-                    <td><input type="radio" v-model="sweet.choice" :value="true" @change="resetError"></td>
-                    <td><input type="radio" v-model="sweet.choice" :value="false" @change="resetError"></td>
 
-                </tr>
-            </tbody>
-        </table>
+  <h1>[[ title ]]</h1>
+  <div v-html="main_text"></div>
 
-        <button :disabled="!allChoicesMade" type="button" @click="checkChoices" class="btn btn-primary">Next</button>
+  <div class="text-center my-3">
+    <img :src="image_path" :alt="title" style="max-width: 600px; width: 100%; height: auto;">
+  </div>
 
+  <form id="form" @submit.prevent="checkChoices">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">[[ interpreter_title ]]</th>
+          <th scope="col">Yes</th>
+          <th scope="col">No</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr v-for="(opt, idx) in sweets" :key="idx">
+          <td>[[ opt.name ]]</td>
+          <td><input type="radio" v-model="opt.choice" :value="true"  @change="error=false"></td>
+          <td><input type="radio" v-model="opt.choice" :value="false" @change="error=false"></td>
+        </tr>
+      </tbody>
+    </table>
 
-        <p v-if="error" class="alert alert-danger my-3">Error: please, check your answers!</p>
-    </form>
-    {% endverbatim %}
+    <button :disabled="!allChoicesMade" type="button" class="btn btn-primary" @click="checkChoices">Next</button>
+    <p v-if="error" class="alert alert-danger my-3">Error: please, check your answers!</p>
+  </form>
+
 </div>
+
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script>
-    const app = Vue.createApp({
-        data() {
-            const sweets = window.interpreter_choices.map((name, index) => ({ name: name, choice: null }));
+const app = Vue.createApp({
+  data() {
+    const s = window.page_settings || {};
+    const answers = Array.isArray(s.right_answer) ? s.right_answer : [];
+    const sweets  = (window.interpreter_choices || []).map(n => ({ name: n, choice: null }));
 
-            return {
-                image_path: js_vars.settings.full_image_path,
-                title: js_vars.settings.title,
-                main_text: js_vars.settings.main_text,
-                interpreter_title: window.interpreter_title,
-                sweets,
-                correctAnswers: js_vars.settings.right_answer.map((i) => Boolean(parseInt(i))),
-                error: false,
-            }
-        },
-        methods: {
-            resetError() {
-                this.error = false;
-            },
-            checkChoices() {
-                if (this.correctAnswers.length !== this.sweets.length) {
-                    console.log('Number of answers do not match');
-                    this.error = true;
-                    return
-                }
+    // prefer full URL from Python; otherwise leave a safe placeholder
+    const image_path = s.full_image_path || 'https://picsum.photos/200/300?text=No+Image';
 
-                const isCorrect = this.sweets.every((userAnswer, index) => {
-                    return userAnswer.choice === this.correctAnswers[index];
-                });
-                this.error = !isCorrect
-                if (isCorrect) {
-                    console.log('All answers are correct');
-                } else {
-                    console.log('Some answers are incorrect');
-                }
+    return {
+      title: s.title || 'Practice',
+      main_text: s.main_text || '',
+      image_path,
+      interpreter_title: window.interpreter_title || 'Interpretation',
+      sweets,
+      // tolerate '1'/'0', true/false, 'True'/'False'
+      correctAnswers: answers.map(v => {
+        if (v === true || v === 'true' || v === 'True') return true;
+        if (v === false || v === 'false' || v === 'False') return false;
+        if (v === 1 || v === '1') return true;
+        if (v === 0 || v === '0') return false;
+        const n = parseInt(v); return !isNaN(n) ? Boolean(n) : false;
+      }),
+      error: false,
+    }
+  },
+  computed: {
+    allChoicesMade() { return this.sweets.every(s => s.choice !== null); }
+  },
+  methods: {
+    checkChoices() {
+      if (this.correctAnswers.length !== this.sweets.length) { this.error = true; return; }
+      const ok = this.sweets.every((u, i) => u.choice === this.correctAnswers[i]);
+      this.error = !ok;
+      if (ok) document.getElementById('form').submit(); // native submit, no jQuery
+    }
+  }
+});
 
-
-                if (!this.error) {
-                    $('#form').submit()
-                }
-            }
-
-
-        },
-        computed: {
-            allChoicesMade() {
-                return this.sweets.every(sweet => sweet.choice !== null);
-            }
-        }
-    })
-    app.mount('#app')
+app.config.compilerOptions.delimiters = ['[[', ']]'];
+app.mount('#app');
 </script>
-
-
-
-
-
-
 
 {% endblock %}
